--- a/pokeR/ClientApp/src/app/pages/landing/landing.component.html
+++ b/pokeR/ClientApp/src/app/pages/landing/landing.component.html
@@ -10,6 +10,7 @@
       <div class="content">
         <h1>Plan your heart out.</h1>
         <p>Created by Alex Griffith, powered by SignalR</p>
+        <p> made Transaction Management worthy by Ben Chapman </p>
       </div>
     </div>
   </div>
