--- a/pokeR/ClientApp/src/app/pages/landing/landing.component.html
+++ b/pokeR/ClientApp/src/app/pages/landing/landing.component.html
@@ -10,7 +10,8 @@
       <div class="content">
         <h1>Plan your heart out.</h1>
         <p>Created by Alex Griffith, powered by SignalR</p>
-        <p> made Transaction Management worthy by Ben Chapman </p>
+        <p>Upgraded for Transaction Management by</p>
+        <p>Benjamino</p>
       </div>
     </div>
   </div>
