--- a/pokeR/ClientApp/src/app/shared-components/join-room/join-room.component.html
+++ b/pokeR/ClientApp/src/app/shared-components/join-room/join-room.component.html
@@ -1,6 +1,6 @@
 <form class="join-form" (submit)="submit()" [formGroup]="form">
   <div class="input-group">
-    <input class="form-control" type="text" name="name" formControlName="name" [class.is-valid]="form.get('name').valid"
+    <input class="form-control" type="text" name="name" formControlName="name" maxlength="15" [class.is-valid]="form.get('name').valid"
       [class.is-invalid]="(submitAttempted || form.get('name').touched) && !form.get('name').valid" autofocus required>
     <label for="name" class="floating-label">Your Name</label>
     <div *ngIf="(submitAttempted || form.get('name').touched) && form.get('name').hasError('required')"
